--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,28 +2,63 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  background-color: #f2f2f2;
+  font-family: 'Roboto', sans-serif;
+}
+
+.bg-tito-color{
+  background-color: #1c2c4c;
+}
+
+.links a {
+  text-decoration: none;
+  position: relative;
+  padding-bottom: 1px;
+}
+
+.links a::before {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  width: 0; 
+  height: 1px;
+  background-color: blue;
+  transition: width 0.3s ease; 
+}
+
+.imagem-clara {
+  filter: brightness(150%) contrast(120%);
+}
+
+.popup {
+  height: 250px;
+  width: 200px;
+  display: none;
+  position: absolute;
+  right: 50px;
+  top: 80px;
+  background-color: white;
+  border: 1px solid #ccc;
+  padding: 10px;
+  z-index: 100;
+}
+
+#hoverItem:hover + #popup {
+  display: block;
+}
+
+.links a:hover::before {
+  width: 100%; 
+}
+
+h1{
+  font-size: 42px;
+  font-weight: 600;
+  font-family: 'Roboto', sans-serif;
+  color: #363636;
 }
 
 @layer utilities {
