--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,6 +13,10 @@ body {
   background-color: #1c2c4c;
 }
 
+.bg-tito-color2{
+  background-color: #21458d;
+}
+
 .links a {
   text-decoration: none;
   position: relative;
@@ -34,13 +38,14 @@ body {
 }
 
 .popup {
-  height: 230px;
-  width: 250px;
+  height: 260px;
+  width: 280px;
   display: none;
   position: absolute;
   right: 50px;
   top: 80px;
-  background-color: white;
+  background-color: #f2f2f2;
+  border-radius: 10px;
   border: 1px solid #ccc;
   padding: 10px;
   z-index: 100;
@@ -65,4 +70,12 @@ h1{
   .text-balance {
     text-wrap: balance;
   }
+}
+
+.footer {
+  position: relative; /* Alterado de absolute para relative */
+  width: 100%;
+  color: white;
+  text-align: center;
+  margin-top: auto; /* Adicionado para garantir que o rodapé permaneça no final da página */
 }
