--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -46,7 +46,10 @@ body {
   position: absolute;
   right: 50px;
   top: 80px;
-  background-color: #f2f2f2;
+  background-color: white;
+  box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+-webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+-moz-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
   border-radius: 10px;
   border: 1px solid #ccc;
   padding: 10px;
