--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -51,7 +51,7 @@ body {
 -webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
 -moz-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
   border-radius: 10px;
-  border: 1px solid #ccc;
+  border: 1px solid #ffffff;
   padding: 10px;
   z-index: 100;
 }
