--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -44,7 +44,7 @@ body {
   width: 280px;
   display: none;
   position: absolute;
-  right: 120px;
+  right: 240px;
   top: 80px;
   background-color: white;
   box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
@@ -85,11 +85,11 @@ h2 {
 }
 
 .footer {
-  position: relative; /* Alterado de absolute para relative */
+  position: relative;
   width: 100%;
   color: white;
   text-align: center;
-  margin-top: auto; /* Adicionado para garantir que o rodapé permaneça no final da página */
+  margin-top: auto;
 }
 
 .awssld__content {
